--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
         </div>
       <h2>About us</h2>
         <p>We are an App development company based in Johannesburg, South Africa</p>
-        <p>We take pride in creating amazing Apps!</p>
+        <p>Creating this app was exciting and fun!</p>
+        <p>Our aim is to provide you with the best entertaining Apps on the internet!</p>
     </body>
 </html>
